bug-fixing and improved error handling